Fix query stats reparse error for $getField: [[]] expression

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • ALL
    • v8.0, v7.3, v7.0, v6.0
    • Hide
      > db.adminCommand({setParameter: 1, internalQueryStatsRateLimit: -1});
      > db.none.aggregate([{"$project":{"all":{"$getField":[[]]},"any":{"$anyElementTrue":[[]]}}}]);
      > db.adminCommand({aggregate: 1, pipeline: [{$queryStats: {}}], cursor: {}});
      
      Show
      > db.adminCommand({setParameter: 1, internalQueryStatsRateLimit: -1}); > db.none.aggregate([{ "$project" :{ "all" :{ "$getField" :[[]]}, "any" :{ "$anyElementTrue" :[[]]}}}]); > db.adminCommand({aggregate: 1, pipeline: [{$queryStats: {}}], cursor: {}});
    • QI 2024-05-27, QI 2024-06-10
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The root cause analysis can be found here.

            Assignee:
            Yoon Soo Kim (Inactive)
            Reporter:
            Yoon Soo Kim (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: