SERVER-90779 Fix query stats re-parsing error with $getField (#22491)

GitOrigin-RevId: 4055c608189c5980bd8f4eb0592bf0b3e471bf03